--- a/index.html
+++ b/index.html
@@ -9,5 +9,20 @@
 	<script src="https://use.fontawesome.com/64906f59e1.js"></script>
 </head>
 <body>
+	<header>
+		<section class="head">
+			<h1>freelaner </h1>
+		 <a href="index.html">about</a>
+		 <a href="index.html">work</a>
+		 <a href="index.html">portfoliot</a>
+		 <a href="index.html">contact</a>
+		 <i class="fa fa-twitter" aria-hidden="true"></i>
+			<i class="fa fa-facebook" aria-hidden="true"></i>
+		<h2>intellingence is nothing without Ambiton</h2>
+		 <p>we're small but impressive creative agency.</p>
+		<p>read more</p>
+</section>
+	</header>
+<section class="head port 2">
 </body>
 </html>
