Je commence le main content de la page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<title>laurie ta gueul</title>
+	<meta charset="utf-8">
 	<meta name="description" content="">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700|Montserrat:700">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -9,20 +10,41 @@
 	<script src="https://use.fontawesome.com/64906f59e1.js"></script>
 </head>
 <body>
-	<header>
-		<section class="head">
-			<h1>freelaner </h1>
+	<section  class=section-1>
+	<header class="en-tete">
+			<h1>freelancer </h1>
+		<nav class="link">
 		 <a href="index.html">about</a>
 		 <a href="index.html">work</a>
 		 <a href="index.html">portfoliot</a>
 		 <a href="index.html">contact</a>
 		 <i class="fa fa-twitter" aria-hidden="true"></i>
-			<i class="fa fa-facebook" aria-hidden="true"></i>
-		<h2>intellingence is nothing without Ambiton</h2>
-		 <p>we're small but impressive creative agency.</p>
-		<p>read more</p>
-</section>
+     <i class="fa fa-facebook" aria-hidden="true"></i>
+   </nav>
+	 <div class="titre">
+			<p><strong class="intello">intelligence <br />is nothing without<br/>Ambition</strong>
+			</br>we're small but impressive creative agency.</p>
+			<div class="bouton"><p><a href="#"><strong>read more</strong></a></p></div>
+		</div>
 	</header>
-<section class="head port 2">
+</section>
+<section class="section-2">
+<div class="peace">
+	<h2>peace<br/>of mind</h2>
+	<p>you're safe with us the privacy and<br />security of your financial information<br/>is our top priorify</p>
+	<a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+</div>
+ <div class="free">
+	 <h2>free actually free</h2>
+  	<p>no more pricing grid.no more fine<br/>
+			print. sending and receving cash is<br/>free without gimmcks.</p>
+			<a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+		</div>
+			<div class="simple">
+				<h2>simple payments</h2>
+					<p>the same debit card you use to buy<br/>coffe lets deposit money straight to<br/>your bank accourt.<br/></p>
+         <a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+			 </div>
+			 </section>
 </body>
 </html>
