Ajout branche debug ulysse

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>laurie ta gueul</title>
+	<title>freelancer</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700|Montserrat:700">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/normalize.css">--><
+
 	<script src="https://use.fontawesome.com/64906f59e1.js"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
 		<nav class="link">
 		 <a href="index.html">about</a>
 		 <a href="index.html">work</a>
-		 <a href="index.html">portfoliot</a>
+		 <a href="index.html">portfolio</a>
 		 <a href="index.html">contact</a>
 		 <i class="fa fa-twitter" aria-hidden="true"></i>
      <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -29,22 +30,34 @@
 	</header>
 </section>
 <section class="section-2">
-<div class="peace">
-	<h2>peace<br/>of mind</h2>
-	<p>you're safe with us the privacy and<br />security of your financial information<br/>is our top priorify</p>
+<section class="peace">
+	<h2>peace of mind</h2>
+	<p>you're safe with us.The privacy and
+		security of your financial information
+		is our top priorify</p>
 	<a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-</div>
- <div class="free">
+</section>
+ <section class="free">
 	 <h2>free actually free</h2>
-  	<p>no more pricing grid.no more fine<br/>
-			print. sending and receving cash is<br/>free without gimmcks.</p>
+  	<p>no more pricing grid.no more fine
+			print. sending and receving cash is
+			free without gimmcks.</p>
 			<a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-		</div>
-			<div class="simple">
+		</section>
+			<section class="simple">
 				<h2>simple payments</h2>
-					<p>the same debit card you use to buy<br/>coffe lets deposit money straight to<br/>your bank accourt.<br/></p>
+					<p>the same debit card you use to buy
+						coffe lets deposit money straight to
+						 your bank accourt.</p>
          <a href="more">more</a><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-			 </div>
+			 </section>
+			 <section class="Portfolio">
+      <h2>portfolio</h2>
+				 <p>we are small,but strong team
+					 no more pricing grids no more fine print.
+					 sending and receiving cash is free withou gimmicks
+					 the sane debit card you use to buy coffee lets deposit
+					 money straight to your bank accound.</p>
 			 </section>
 </body>
 </html>
