--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700|Montserrat:700">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://use.fontawesome.com/64906f59e1.js"></script>
 </head>
 <body>
